--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "viem": "^1.5.4",
+    "wagmi": "^1.3.10"
   }
 }
