--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^1.0.8",
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "dotenv": "^16.3.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "ethers": "^6.7.0",
     "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
@@ -22,7 +25,7 @@
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
-    "viem": "^1.5.4",
+    "viem": "^1.6.0",
     "wagmi": "^1.3.10"
   }
 }
