--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@rainbow-me/rainbowkit": "^1.0.8",
+    "@types/glob": "^8.1.0",
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
@@ -18,14 +19,20 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "ethers": "^6.7.0",
+    "glob": "^8.1.0",
+    "gray-matter": "^4.0.3",
     "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "reading-time": "^1.5.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "viem": "^1.6.0",
     "wagmi": "^1.3.10"
+  },
+  "browser": {
+    "net": false
   }
 }
